# app/core/entity/dtype.go
@@ -1,0 +1,10 @@
+package entity
+
+type UserRole string
+
+const (
+	RoleClient   UserRole = "client"
+	RoleOwner    UserRole = "owner"
+	RoleDelivery UserRole = "delivery"
+	RoleAny      UserRole = "any"
+)
