# app/domain/restaurant/dto/category.go
@@ -1,0 +1,7 @@
+package dto
+
+type CreateCategoryInput struct {
+	Name string `json:"name" validate:"required"`
+}
+
+type UpdateCategoryInput struct{}
