# docs/swagger.json
@@ -30,7 +30,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Auth"
+                    "Category"
                 ],
                 "summary": "로그인",
                 "parameters": [
@@ -40,7 +40,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.LoginInput"
+                            "$ref": "#/definitions/dto.CreateCategoryInput"
                         }
                     }
                 ],
@@ -81,6 +81,17 @@
         }
     },
     "definitions": {
+        "dto.CreateCategoryInput": {
+            "type": "object",
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.LoginInput": {
             "type": "object",
             "required": [
@@ -115,9 +126,24 @@
                     "type": "string"
                 },
                 "role": {
-                    "type": "string"
+                    "$ref": "#/definitions/entity.UserRole"
                 }
             }
+        },
+        "entity.UserRole": {
+            "type": "string",
+            "enum": [
+                "client",
+                "owner",
+                "delivery",
+                "any"
+            ],
+            "x-enum-varnames": [
+                "RoleClient",
+                "RoleOwner",
+                "RoleDelivery",
+                "RoleAny"
+            ]
         }
     },
     "securityDefinitions": {
